--- a/src/dashboard/static/index.html
+++ b/src/dashboard/static/index.html
@@ -7,6 +7,7 @@
   <link rel="icon" href="/assets/favicon.svg" />
   <title>SWASH Dashboard</title>
   <link rel="stylesheet" href="/css/style.css">
+  <script src="https://cdn.plot.ly/plotly-3.0.1.min.js"></script>
 </head>
 
 <body>
